-------------------------------------
	4.1-1
-------------------------------------

Upgraded jquery-ui to 1.8.14

Translation bug fixes.

VM settings are now available while VM is running. Some settings
can be modified.

Minor UI updates.

Fixed bug that would activate all configured USB filters when
saving a VM.

Implemented overwriting of existing file in appliance export
wizard.

Fixed bug in IE that would not allow for the entry of internal
network names in VM settings.

Fixed Clone VM wizard bug that would force the selection of
"Current machine and all child states."

Removed "Current machine and all child states" option from Clone
VM wizard as it is unsupported by VirtualBox at this time.

Fixed display bug in VM log viewer when pressing the Refresh
button.

-------------------------------------
	4.1-0	2011-7-19
-------------------------------------
VirtualBox 4.1.x compatibility.

jquery upgrade to 1.6.2.

Fixed issue where exported disks would be incorrectly named when
exporting a virtual machine.
http://code.google.com/p/phpvirtualbox/issues/detail?id=307

UI updates for wizards.

Most translations are now taken from the VirtualBox source .qt
files.

-------------------------------------
	4.0-7	2011-6-8
-------------------------------------
Removed $sessionSecurityLevel setting and associated logic as it
really provided no extra session security.

Fixed session bug where another client running the same browser
from the same subnet could inherit another user's session.
http://code.google.com/p/phpvirtualbox/issues/detail?id=295

Fixed bug that would not allow you to edit more than one host-only
networking adapter.
http://code.google.com/p/phpvirtualbox/issues/detail?id=310

Added $consoleKeyboardLayout setting.
http://code.google.com/p/phpvirtualbox/issues/detail?id=248

-------------------------------------
	4.0-6	2011-5-24
-------------------------------------
Pressing Esc key now closes most dialog boxes.